@@ -1,3 +1,8 @@
+2005-08-17  James Henstridge  <james@jamesh.id.au>
+
+	* macros2/gnome-autogen.sh: don't use syntax that non-GNU greps
+	don't understand.  Fixes bug #313531.
+
 2005-08-16  James Henstridge  <james@jamesh.id.au>
 
 	* macros2/gnome-autogen.sh: add checks for gnome-common macro
